[EJBBOOK-3] Rename "firstejb" to use chapter prefix for readability

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <!-- Modules in Aggregator -->
   <modules>
     <module>build</module>
-    <module>firstejb</module>
+    <module>ch04-firstejb</module>
   </modules>
 
 </project>
