[EJBBOOK-4] Add Chapter 5 examples to the aggregator

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
   <modules>
     <module>build</module>
     <module>ch04-firstejb</module>
+    <module>ch05-encryption</module>
   </modules>
 
 </project>
