[EJBBOOK-8] Added ch06-filetransfer SFSB examples to aggregator POM

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <module>build</module>
     <module>ch04-firstejb</module>
     <module>ch05-encryption</module>
+    <module>ch06-filetransfer</module>
   </modules>
 
 </project>
