[EJBBOOK-9] Start of @Singleton examples

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <module>ch04-firstejb</module>
     <module>ch05-encryption</module>
     <module>ch06-filetransfer</module>
+    <module>ch07-envinfo</module>
   </modules>
 
 </project>
