--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <module>ch04-firstejb</module>
     <module>ch05-encryption</module>
     <module>ch06-filetransfer</module>
-    <module>ch07-envinfo</module>
+    <module>ch07-rsscache</module>
   </modules>
 
 </project>
