[EJBBOOK-9] Update Rome to 1.0

--- a/ch07-rsscache/pom.xml
+++ b/ch07-rsscache/pom.xml
@@ -26,7 +26,7 @@
   <properties>
 
     <!-- Versioning -->
-    <version.rome_rome.fetcher>1.0RC2</version.rome_rome.fetcher>
+    <version.rome_rome.fetcher>1.0</version.rome_rome.fetcher>
 
   </properties>
 
