[EJBBOOK-11] Add @MessageDriven examples for JMS Topic Listeners

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <module>ch05-encryption</module>
     <module>ch06-filetransfer</module>
     <module>ch07-rsscache</module>
+    <module>ch08-statusupdate</module>
   </modules>
 
 </project>
