[EJBBOOK-13] Create the setup for MDB message destination examples (incomplete)

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <module>ch06-filetransfer</module>
     <module>ch07-rsscache</module>
     <module>ch08-statusupdate</module>
+    <module>ch08-messagedestinationlink</module>
   </modules>
 
 </project>
