--- a/ch05-encryption/src/test/resources/jndi.properties
+++ b/ch05-encryption/src/test/resources/jndi.properties
@@ -1,4 +1,2 @@
-# JNDI Properties for Remote interaction with JBoss Application Server Naming Service 
-java.naming.factory.initial=org.jnp.interfaces.NamingContextFactory
-java.naming.factory.url.pkgs=org.jboss.naming:org.jnp.interfaces
-java.naming.provider.url=jnp://localhost:1099
+# JNDI Properties for Local interaction with OpenEJB Naming Provider 
+java.naming.factory.initial=org.apache.openejb.client.LocalInitialContextFactory
