[EJBBOOK-21] Update to latest ShrinkWrap and Arquillian dependencies

--- a/ch05-encryption/pom.xml
+++ b/ch05-encryption/pom.xml
@@ -79,8 +79,8 @@
     </dependency>
     
     <dependency>
-      <groupId>org.jboss.arquillian</groupId>
-      <artifactId>arquillian-container-openejb</artifactId>
+      <groupId>org.jboss.arquillian.container</groupId>
+      <artifactId>arquillian-openejb</artifactId>
     </dependency>
     
     <dependency>
