--- a/ch06-filetransfer/pom.xml
+++ b/ch06-filetransfer/pom.xml
@@ -98,8 +98,8 @@
     
     <!-- Arquillian Test Harness -->
     <dependency>
-      <groupId>org.jboss.arquillian</groupId>
-      <artifactId>arquillian-container-openejb</artifactId>
+      <groupId>org.jboss.arquillian.container</groupId>
+      <artifactId>arquillian-openejb</artifactId>
     </dependency>
     <dependency>
       <groupId>org.jboss.arquillian</groupId>
