--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <module>ch08-messagedestinationlink</module>
     <module>ch09-secureschool</module>
     <module>chxx-interceptors</module>
+    <module>chxx-poker</module>
   </modules>
 
 </project>
