[EJBBOOK-24] Add the Timer Service examples to the aggregator POM

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <module>ch09-secureschool</module>
     <module>chxx-interceptors</module>
     <module>chxx-poker</module>
+    <module>chxx-timer</module>
   </modules>
 
 </project>
