--- a/ch04-firstejb/pom.xml
+++ b/ch04-firstejb/pom.xml
@@ -49,6 +49,18 @@
       <groupId>org.jboss.arquillian</groupId>
       <artifactId>arquillian-junit</artifactId>
     </dependency>
+    
+    <dependency>
+      <groupId>org.apache.openejb</groupId>
+      <artifactId>openejb-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
 
