--- a/ch09-secureschool/pom.xml
+++ b/ch09-secureschool/pom.xml
@@ -27,7 +27,6 @@
   <properties>
 
     <!-- Versioning -->
-    <version.javax.inject_javax.inject>1</version.javax.inject_javax.inject>
 
   </properties>
 
@@ -65,9 +64,13 @@
     </dependency>
     
     <dependency>
+      <groupId>org.apache.openejb</groupId>
+      <artifactId>openejb-core</artifactId>
+    </dependency>
+    
+    <dependency>
       <groupId>javax.inject</groupId>
       <artifactId>javax.inject</artifactId>
-      <version>${version.javax.inject_javax.inject}</version>
       <scope>test</scope>
     </dependency>
 
