--- a/chxx-interceptors/pom.xml
+++ b/chxx-interceptors/pom.xml
@@ -69,6 +69,17 @@
       <artifactId>arquillian-junit</artifactId>
     </dependency>
     
+    <dependency>
+      <groupId>org.apache.openejb</groupId>
+      <artifactId>openejb-core</artifactId>
+    </dependency>
+    
+    <dependency>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
+      <scope>test</scope>
+    </dependency>
+    
     <!-- JUnit -->
     <dependency>
       <groupId>junit</groupId>
