--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <module>ch08-messagedestinationlink</module>
     <module>ch09-secureschool</module>
     <module>chxx-interceptors</module>
-    <module>chxx-poker</module>
+    <module>chxx-blackjack</module>
     <module>chxx-timer</module>
     <module>chxx-employeeregistry</module>
     <module>testsupport</module>
