--- a/ch06-filetransfer/pom.xml
+++ b/ch06-filetransfer/pom.xml
@@ -45,7 +45,7 @@
   <properties>
 
     <!-- Versioning -->
-    <version.org.apache.ftpserver_ftpserver.core>1.0.1</version.org.apache.ftpserver_ftpserver.core>
+    <version.org.apache.ftpserver_ftpserver.core>1.0.4</version.org.apache.ftpserver_ftpserver.core>
     <version.commons.net_commons.net>2.0</version.commons.net_commons.net>
     <version.org.slf4j_slf4j.jcl>1.5.2</version.org.slf4j_slf4j.jcl>
 
@@ -78,6 +78,12 @@
     <dependency>
       <groupId>org.apache.ftpserver</groupId>
       <artifactId>ftpserver-core</artifactId>
+      <version>${version.org.apache.ftpserver_ftpserver.core}</version>
+    </dependency>
+    <!-- ftpserver-core is badly-formed, Maven3 needs this explicitly (m2eclipse 0.10.0) to compile -->
+    <dependency>
+      <groupId>org.apache.ftpserver</groupId>
+      <artifactId>ftplet-api</artifactId>
       <version>${version.org.apache.ftpserver_ftpserver.core}</version>
     </dependency>
 
