[EJBBOOK-29] Move Transactional examples to Chapter17 namespace

--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
     <module>ch08-messagedestinationlink</module>
     <module>ch09-14-employeeregistry</module>
     <module>ch15-secureschool</module>
+    <module>ch17-blackjack</module>
     <module>chxx-interceptors</module>
-    <module>chxx-blackjack</module>
     <module>chxx-timer</module>
     <module>testsupport</module>
   </modules>
