--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <module>ch09-14-employeeregistry</module>
     <module>ch15-secureschool</module>
     <module>ch17-blackjack</module>
-    <module>chxx-interceptors</module>
+    <module>ch18-interceptors</module>
     <module>chxx-timer</module>
     <module>testsupport</module>
   </modules>
