--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <module>ch15-secureschool</module>
     <module>ch17-blackjack</module>
     <module>ch18-interceptors</module>
-    <module>chxx-timer</module>
+    <module>ch19-timer</module>
     <module>testsupport</module>
   </modules>
 
