--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <module>ch08-messagedestinationlink</module>
     <module>ch09-14-employeeregistry</module>
     <module>ch15-secureschool</module>
-    <module>ch17-blackjack</module>
+    <module>ch17-transactions</module>
     <module>ch18-interceptors</module>
     <module>ch19-timer</module>
     <module>testsupport</module>
