--- a/testsupport/pom.xml
+++ b/testsupport/pom.xml
@@ -5,8 +5,8 @@
   <parent>
     <groupId>org.jboss.ejb3.examples</groupId>
     <artifactId>jboss-ejb3-examples-build</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
+    <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../build/pom.xml</relativePath>
   </parent>
 
   <!-- Model Version -->
