--- a/ch06-filetransfer/pom.xml
+++ b/ch06-filetransfer/pom.xml
@@ -120,7 +120,7 @@
     <!-- Arquillian Test Harness -->
     <dependency>
       <groupId>org.jboss.arquillian.container</groupId>
-      <artifactId>arquillian-openejb</artifactId>
+      <artifactId>arquillian-openejb-embedded-3.1</artifactId>
     </dependency>
     <dependency>
       <groupId>org.jboss.arquillian</groupId>
