--- a/ch15-secureschool/pom.xml
+++ b/ch15-secureschool/pom.xml
@@ -55,7 +55,7 @@
     
     <dependency>
       <groupId>org.jboss.arquillian.container</groupId>
-      <artifactId>arquillian-openejb</artifactId>
+      <artifactId>arquillian-openejb-embedded-3.1</artifactId>
     </dependency>
     
     <dependency>
