--- a/ch18-interceptors/pom.xml
+++ b/ch18-interceptors/pom.xml
@@ -62,7 +62,7 @@
     <!-- Arquillian Test Harness -->
     <dependency>
       <groupId>org.jboss.arquillian.container</groupId>
-      <artifactId>arquillian-openejb</artifactId>
+      <artifactId>arquillian-openejb-embedded-3.1</artifactId>
     </dependency>
     <dependency>
       <groupId>org.jboss.arquillian</groupId>
