--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>org.jboss.ejb3.examples</groupId>
   <artifactId>jboss-ejb3-examples-aggregator</artifactId>
   <name>Aggregator POM for JBoss EJB3 Examples</name>
-  <version>1.0.0-cr-1-SNAPSHOT</version>
+  <version>1.0.0-cr-1</version>
   <description>Aggregator POM for JBoss EJB3 Examples</description>
   <packaging>pom</packaging>
 
