--- a/ch08-messagedestinationlink/pom.xml
+++ b/ch08-messagedestinationlink/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.jboss.ejb3.examples</groupId>
     <artifactId>jboss-ejb3-examples-build</artifactId>
-    <version>1.0.0-cr-1</version>
+    <version>1.1.0-SNAPSHOT</version>
     <relativePath>../build/pom.xml</relativePath>
   </parent>
 
