--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,12 @@
     <module>ch05-encryption</module>
     <module>ch06-filetransfer</module>
     <module>ch07-rsscache</module>
-    <module>ch08-statusupdate</module>
+
+<!-- 
+    Twitter disabled Basic Authentication
+    https://jira.jboss.org/browse/EJBBOOK-38 
+
+    <module>ch08-statusupdate</module> -->
     <module>ch08-messagedestinationlink</module>
     <module>ch09-14-employeeregistry</module>
     <module>ch15-secureschool</module>
