[EJBBOOK-40] Work around Maven3 dependency ordering

--- a/ch09-14-employeeregistry/pom.xml
+++ b/ch09-14-employeeregistry/pom.xml
@@ -82,6 +82,14 @@
       <scope>compile</scope> <!-- Should be "test", but I can't find the GAV for JPA APIs -->
     </dependency>
 
+    <dependency>
+      <groupId>org.jboss.jbossas.osgi</groupId>
+      <artifactId>jboss-as-osgi-distribution</artifactId>
+      <version>${version.org.jboss.jbossas}</version>
+      <type>pom</type>
+    </dependency>
+
+
   </dependencies>
   
   <!--
@@ -100,6 +108,12 @@
         <version>${version.org.jboss.jbossas}</version>
         <type>pom</type>
         <scope>import</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>org.jboss.jbossas.osgi</groupId>
+            <artifactId>jboss-as-osgi-distribution</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
    </dependencies>
     
