--- a/ch17-transactions/pom.xml
+++ b/ch17-transactions/pom.xml
@@ -78,6 +78,18 @@
       <version>${version.org.jboss.jbossas}</version>
       <type>pom</type>
       <scope>compile</scope> <!-- Should be "test", but I can't find the GAV for JPA APIs -->
+      <exclusions>
+        <exclusion>
+          <groupId>org.jboss.jbossas.osgi</groupId>
+          <artifactId>jboss-as-osgi-distribution</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.jbossas.osgi</groupId>
+      <artifactId>jboss-as-osgi-distribution</artifactId>
+      <version>${version.org.jboss.jbossas}</version>
+      <type>pom</type>
     </dependency>
 
   </dependencies>
